--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ShowActivity1">
+
+        </activity>
+
+        <activity android:name=".showActivity2">
+
+        </activity>
+
     </application>
 
 </manifest>
