--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         </activity>
 
         <activity android:name=".showActivity2">
+        </activity>
 
+        <activity android:name=".show712">
         </activity>
 
     </application>
