--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity android:name=".show712">
         </activity>
 
+        <activity android:name=".BezierActivity">
+        </activity>
+
     </application>
 
 </manifest>
