--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.coinvs.testsurfaceview">
+          package="com.coinvs.testsurfaceview">
 
     <application
         android:allowBackup="true"
@@ -11,28 +11,23 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".ShowActivity1">
-
         </activity>
-
         <activity android:name=".showActivity2">
         </activity>
-
         <activity android:name=".show712">
         </activity>
-
         <activity android:name=".BezierActivity">
         </activity>
-
         <activity android:name=".AnimationActivity">
         </activity>
-
+        <activity android:name=".CoordinateLayoutActivity">
+        </activity>
     </application>
 
 </manifest>
